# MeeShopGUI

./: AppSheet.qml  CMakeLists.txt  CMakeUserPresets.json  InstallationRectangle.qml  LICENSE  Makefile  QtCreatorDeployment.txt  README.md  SwipePageStackWindow  SwipePageStackWindow.desktop  SwipePageStackWindow.pro  SwipePageStackWindow_harmattan.desktop  build_args.txt  conanfile.txt  info_storage.h  information_processor.cpp  information_processor.h  main.cpp  notification_manager.h  packagemanager.cpp  packagemanager.h  processmanager.cpp  processmanager.h  qmlviewer.cpp  qmlviewer.h  swipecontrol.cpp  swipecontrol.h  swipepagestackwindow_0.0.1_armel.changes  swipepagestackwindow_0.0.1_armel.deb
debian/: README  changelog  control  copyright  meeshop.aegis  postinst  rules
moc/: moc_Gradienter.cpp  moc_MeeShopApplicationModel.cpp  moc_information_processor.cpp  moc_notification_manager.cpp  moc_processmanager.cpp  moc_qmlapplicationviewer.cpp  moc_qmlviewer.cpp  moc_swipecontrol.cpp
pageswitcher/: PageSwitcher.qml  nokiashape.h
qml/SwipePageStackWindow/: AppsPage.qml  HomePage.qml  RssPage.qml  SwipePageStackWindow.qml  main.qml
qml/SwipePageStackWindow/Components/: AppSheet.qml  InstallationRectangle.qml  SwipePageStackWindow.qml
qtc_packaging/debian_harmattan/: control  manifest.aegis  rules
resources/: meeshop_harmattan.desktop  resources.qrc
resources/qml/: main.qml
resources/qml/Components/: AppDelegate.qml  AppSheet.qml  CategoriesSheet.qml  CategoryDelegate.qml  CategoryDelegate.qml.autosave  CategorySelectDialog.qml  ExtendedIndicator.qml  Header.qml  IconGradient.qml  InstallationManager.qml  InstallationRectangle.qml  LoadMoreRectangle.qml  PageSelectionDialog.qml  PageSwitcher.qml  SearchField.qml  SectionDelegate.qml  SectionHeader.qml  SortByDelegate.qml  SortByDelegate.qml.autosave  SwipeListDelegate.qml  TextCollapsible.qml  UIConstants.js  Waiter.qml  constants.js
resources/qml/Pages/: AppPage.qml  AppsPage.qml  HomePage.qml  RssPage.qml
src/: Gradienter.h  MeeShopApplicationModel.cpp  MeeShopApplicationModel.h  MeeShopCategoriesModel.cpp  MeeShopCategoriesModel.h  MeeShopPagesModel.cpp  MeeShopPagesModel.h  applicationinfo.cpp  main.cpp  meeshopapi.cpp  meeshopapi.h  openreposapi.cpp  openreposapi.h  processmanager.h  swipecontrol.h
src/models/: MeeShopApplicationModel.h  MeeShopCategoriesModel.cpp  MeeShopCategoriesModel.h  applicationmodel.cpp  applicationmodel.h  categoriesmodel.cpp  categoriesmodel.h
src/qml_elements/: Gradienter.h  ProgressIndicator.h  gradienter.h  nokiashape.h
src/structs/: applicationinfo.cpp  applicationinfo.h
src/tools/: LambdaSlot.h  PackageManager.cpp  PackageManager.h  notifyer.cpp  notifyer.h  openreposapi.cpp  openreposapi.h  packagemanager.cpp  packagemanager.h  packageutils.cpp  packageutils.h  swipecontrol.cpp  swipecontrol.h
src/tools/apt/: apt.h  pseudoTerminal.cpp  pseudoTerminal.h  pseudoterminal.cpp  pseudoterminal.h
tools/: conan_provider.cmake  n9  toolchain.cmake
